--- a/onetap/src/QueuePage.css
+++ b/onetap/src/QueuePage.css
@@ -12,26 +12,75 @@
 }
 
 .c-appointment__token__wrappers {
+}
+
+.c-appointment__big-token__wrappers {
+  padding: 10px;
+  box-shadow: 0 -1px 5px 0 #e5e5e8;
+  background: white;
+  margin-right: 20px;
+}
+
+.c-current-token__wrapper {
+  height: 300px;
+  padding: 10px;
+  background: #006e00;
+  color: #414146;
+  margin-bottom: 10px;
+}
+
+.c-current-token__title {
+  font-size: 18px;
+  color: white;
+}
+
+.c-current-token__body {
+  color: white;
+  width: 100%;
+  height: 250px;
+  position: relative;
+}
+
+.c-current-token__inner-body {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+}
+
+.c-current-token__name {
+  height: 100px;
+  line-height: 100px;
+  font-size: 48px;
+  text-align: center;
+}
+
+.c-current-token__phone {
+  height: 50px;
+  line-height: 50px;
+  font-size: 32px;
+  text-align: center;
+  letter-spacing: 5px;
+}
+
+.c-next-token__wrapper {
+  height: 300px;
+  padding: 20px;
+  background: #e3f5ab;
+  color: #414146;
+}
+
+.c-remaining-token__full-wrapper {
   background: white;
   padding: 10px;
   box-shadow: 0 -1px 5px 0 #e5e5e8;
 }
 
-.c-current-token__wrapper {
-  height: 300px;
-  margin-right: 20px;
-  padding: 20px;
-  background: #01a400;
+.c-remaining-token__title {
+  font-size: 24px;
   color: #414146;
   margin-bottom: 10px;
-}
-
-.c-next-token__wrapper {
-  height: 300px;
-  margin-right: 20px;
-  padding: 20px;
-  background: #ffeb01;
-  color: #414146;
 }
 
 .c-remaining-token__wrapper {
