--- a/onetap/src/QueuePage.css
+++ b/onetap/src/QueuePage.css
@@ -66,9 +66,45 @@
 
 .c-next-token__wrapper {
   height: 300px;
-  padding: 20px;
+  padding: 10px;
   background: #e3f5ab;
   color: #414146;
+}
+
+.c-next-token__title {
+  font-size: 18px;
+  color: #414146;
+}
+
+.c-next-token__body {
+  color: white;
+  width: 100%;
+  height: 250px;
+  position: relative;
+  color: #414146;
+}
+
+.c-next-token__inner-body {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+}
+
+.c-next-token__name {
+  height: 100px;
+  line-height: 100px;
+  font-size: 48px;
+  text-align: center;
+}
+
+.c-next-token__phone {
+  height: 50px;
+  line-height: 50px;
+  font-size: 32px;
+  text-align: center;
+  letter-spacing: 5px;
 }
 
 .c-remaining-token__full-wrapper {
