--- a/onetap/src/QueuePage.css
+++ b/onetap/src/QueuePage.css
@@ -4,9 +4,8 @@
 
 .c-queue__title {
   border-radius: 2px;
-  font-size: 42px;
-  padding: 10px;
-  line-height: 50px;
+  font-size: 36px;
+  padding: 5px 10px;
   margin-bottom: 10px;
   background: white;
   box-shadow: 0 -1px 5px 0 #e5e5e8;
@@ -26,7 +25,7 @@
 
 .c-current-token__wrapper {
   border-radius: 2px;
-  height: 300px;
+  height: 250px;
   padding: 10px;
   background: #006e00;
   color: #414146;
@@ -41,7 +40,7 @@
 .c-current-token__body {
   color: white;
   width: 100%;
-  height: 250px;
+  height: 200px;
   position: relative;
 }
 
@@ -54,15 +53,11 @@
 }
 
 .c-current-token__name {
-  height: 100px;
-  line-height: 100px;
   font-size: 48px;
   text-align: center;
 }
 
 .c-current-token__phone {
-  height: 50px;
-  line-height: 50px;
   font-size: 32px;
   text-align: center;
   letter-spacing: 5px;
@@ -70,7 +65,7 @@
 
 .c-next-token__wrapper {
   border-radius: 2px;
-  height: 300px;
+  height: 250px;
   padding: 10px;
   background: #ffeb01;
   color: #414146;
@@ -84,7 +79,7 @@
 .c-next-token__body {
   color: white;
   width: 100%;
-  height: 250px;
+  height: 200px;
   position: relative;
   color: #414146;
 }
@@ -98,15 +93,11 @@
 }
 
 .c-next-token__name {
-  height: 100px;
-  line-height: 100px;
   font-size: 48px;
   text-align: center;
 }
 
 .c-next-token__phone {
-  height: 50px;
-  line-height: 50px;
   font-size: 32px;
   text-align: center;
   letter-spacing: 5px;
